added top-slider section

--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "gulp-concat": "^2.6.1",
     "gulp-imagemin": "^7.1.0",
     "gulp-sass": "^4.1.0",
-    "jquery": "^3.5.1"
+    "jquery": "^3.5.1",
+    "slick-carousel": "^1.8.1"
   },
   "dependencies": {
     "gulp-debug": "^4.0.0",
