--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "home-market",
+  "name": "start gulp-market",
   "version": "1.0.0",
   "description": "magazin",
   "main": "index.js",
@@ -9,6 +9,7 @@
   "author": "Olga kryvosheieva",
   "license": "ISC",
   "devDependencies": {
+    "@fancyapps/fancybox": "^3.5.7",
     "browser-sync": "^2.26.13",
     "del": "^6.0.0",
     "gulp": "^4.0.2",
