--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "gulp-imagemin": "^7.1.0",
     "gulp-sass": "^4.1.0",
     "jquery": "^3.5.1",
+    "rateyo": "^2.3.2",
     "slick-carousel": "^1.8.1"
   },
   "dependencies": {
